changement 'connect.js'

--- a/sign-in.html
+++ b/sign-in.html
@@ -18,6 +18,10 @@
             <h1 hidden>Hello World!</h1>
             <img src="pictures/hello_world.jpg">
         
+            <div class="user-icon">
+                <span class="user-name"></span>
+            </div>
+        
             <div class="head-link">
                 <ul class="link-list">
                     <div class="main-link">
